[package]
name = "screener-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.25.0"
web3 = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.64"
reqwest = "0.11.14"
regex = "1.7.1"
futures = "0.3.26"
rand = "0.8.5"
serde_json = "1.0.93"
json_comments = "0.2.1"
rbatis = "4.0.58"
rbdc-pg = "0.1.22"
rbs = "0.1.15"
rbdc = "0.1.23"


[lib]
name = "screener"
path = "src/lib.rs"
